--- a/index.html
+++ b/index.html
@@ -1,1 +1,54 @@
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Резюме</title>
+    <link rel="stylesheet" href="styles.css"> <!-- Подключение CSS -->
+</head>
+<body>
+    <header>
+        <h1>Ваше Имя</h1>
+        <p>Ваша профессия (например, Тестировщик ПО)</p>
+        <p>Email: ваш_email@example.com</p>
+        <p>Телефон: +7 (999) 999-99-99</p>
+    </header>
+    <section>
+        <h2>О себе</h2>
+        <p>Краткое описание о себе и своих целях.</p>
+    </section>
+    <section>
+        <h2>Опыт работы</h2>
+        <ul>
+            <li>
+                <strong>Должность</strong> - Компания (Год - Год)
+                <p>Описание обязанностей и достижений.</p>
+            </li>
+            <!-- Добавьте другие места работы -->
+        </ul>
+    </section>
+    <section>
+        <h2>Образование</h2>
+        <ul>
+            <li>
+                <strong>Степень</strong> - Учебное заведение (Год - Год)
+                <p>Описание курса или специальности.</p>
+            </li>
+            <!-- Добавьте другие учебные заведения -->
+        </ul>
+    </section>
+    <section>
+        <h2>Навыки</h2>
+        <ul>
+            <li>Навык 1</li>
+            <li>Навык 2</li>
+            <li>Навык 3</li>
+            <!-- Добавьте другие навыки -->
+        </ul>
+    </section>
+    <footer>
+        <p>Ссылки на ваши профили в социальных сетях или портфолио.</p>
+    </footer>
+</body>
+</html>
 
