--- a/index.html
+++ b/index.html
@@ -52,5 +52,6 @@
             <p>Ссылки на ваши профили в социальных сетях или портфолио.</p>
         </div>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
