--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         </div>
     </header>
     <main class="container">
+        <section class="profile">
+            <img src="profile.jpg" alt="Фото профиля" class="profile-pic"> <!-- Замените на путь к вашему фото -->
+        </section>
         <section class="about">
             <h2>О себе</h2>
             <p>Краткое описание о себе и своих целях. Например, "Я тестировщик с опытом работы в различных проектах, стремлюсь к качеству и улучшению пользовательского опыта."</p>
@@ -45,6 +48,27 @@
                 <li>Навык 3</li>
                 <!-- Добавьте другие навыки -->
             </ul>
+        </section>
+        <section class="languages">
+            <h2>Знание языков</h2>
+            <div class="language">
+                <span>Русский</span>
+                <div class="progress">
+                    <div class="progress-fill" style="width: 100%;"></div>
+                </div>
+            </div>
+            <div class="language">
+                <span>Английский</span>
+                <div class="progress">
+                    <div class="progress-fill" style="width: 80%;"></div>
+                </div>
+            </div>
+            <div class="language">
+                <span>Немецкий</span>
+                <div class="progress">
+                    <div class="progress-fill" style="width: 50%;"></div>
+                </div>
+            </div>
         </section>
     </main>
     <footer>
