--- a/index.html
+++ b/index.html
@@ -5,13 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Резюме</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"> <!-- Подключение иконок Font Awesome -->
 </head>
 <body>
     <header>
         <div class="container">
-            <h1>Ваше Имя</h1>
+            <h1>Александр Биланин</h1>
             <p>Тестировщик ПО</p>
-            <p>Email: ваш_email@example.com | Телефон: +7 (999) 999-99-99</p>
+            <p>Email: a.bilanins@yahoo.com | Телефон: +7 (920) 067-54-13</p>
+            <p>
+                <a href="https://t.me/adjuvatique" target="_blank">
+                    <i class="fab fa-telegram"></i> Telegram
+                </a>
+            </p>
         </div>
     </header>
     <main class="container">
