--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Резюме</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"> <!-- Подключение иконок Font Awesome -->
 </head>
 <body>
@@ -14,68 +14,72 @@
             <p>Тестировщик ПО</p>
             <p>Email: a.bilanins@yahoo.com | Телефон: +7 (920) 067-54-13</p>
             <p>
-                <a href="https://t.me/adjuvatique" target="_blank">
+                <a href="https://t.me/adjuvatique" target="_blank" style="color: #fff;">
                     <i class="fab fa-telegram"></i> Telegram
                 </a>
             </p>
         </div>
     </header>
     <main class="container">
-        <section class="profile">
-            <img src="profile.jpg" alt="Фото профиля" class="profile-pic"> <!-- Замените на путь к вашему фото -->
-        </section>
-        <section class="about">
-            <h2>О себе</h2>
-            <p>Краткое описание о себе и своих целях. Например, "Я тестировщик с опытом работы в различных проектах, стремлюсь к качеству и улучшению пользовательского опыта."</p>
-        </section>
-        <section class="experience">
-            <h2>Опыт работы</h2>
-            <div class="job">
-                <h3>Должность - Компания</h3>
-                <p>Год - Год</p>
-                <p>Описание обязанностей и достижений.</p>
-            </div>
-            <!-- Добавьте другие места работы -->
-        </section>
-        <section class="education">
-            <h2>Образование</h2>
-            <div class="edu">
-                <h3>Степень - Учебное заведение</h3>
-                <p>Год - Год</p>
-                <p>Описание курса или специальности.</p>
-            </div>
-            <!-- Добавьте другие учебные заведения -->
-        </section>
-        <section class="skills">
-            <h2>Навыки</h2>
-            <ul>
-                <li>Навык 1</li>
-                <li>Навык 2</li>
-                <li>Навык 3</li>
-                <!-- Добавьте другие навыки -->
-            </ul>
-        </section>
-        <section class="languages">
-            <h2>Знание языков</h2>
-            <div class="language">
-                <span>Русский</span>
-                <div class="progress">
-                    <div class="progress-fill" style="width: 100%;"></div>
+        <div class="sidebar">
+            <section class="profile">
+                <img src="profile.jpg" alt="Фото профиля" class="profile-pic"> <!-- Замените на путь к вашему фото -->
+            </section>
+            <section class="education">
+                <h2>Образование</h2>
+                <div class="edu">
+                    <h3>Степень - Учебное заведение</h3>
+                    <p>Год - Год</p>
+                    <p>Описание курса или специальности.</p>
                 </div>
-            </div>
-            <div class="language">
-                <span>Английский</span>
-                <div class="progress">
-                    <div class="progress-fill" style="width: 80%;"></div>
+                <!-- Добавьте другие учебные заведения -->
+            </section>
+            <section class="skills">
+                <h2>Навыки</h2>
+                <ul>
+                    <li>Навык 1</li>
+                    <li>Навык 2</li>
+                    <li>Навык 3</li>
+                    <!-- Добавьте другие навыки -->
+                </ul>
+            </section>
+        </div>
+        <div class="content">
+            <section class="about">
+                <h2>О себе</h2>
+                <p>Краткое описание о себе и своих целях. Например, "Я тестировщик с опытом работы в различных проектах, стремлюсь к качеству и улучшению пользовательского опыта."</p>
+            </section>
+            <section class="experience">
+                <h2>Опыт работы</h2>
+                <div class="job">
+                    <h3>Должность - Компания</h3>
+                    <p>Год - Год</p>
+                    <p>Описание обязанностей и достижений.</p>
                 </div>
-            </div>
-            <div class="language">
-                <span>Немецкий</span>
-                <div class="progress">
-                    <div class="progress-fill" style="width: 50%;"></div>
+                <!-- Добавьте другие места работы -->
+            </section>
+            <section class="languages">
+                <h2>Знание языков</h2>
+                <div class="language">
+                    <span>Русский</span>
+                    <div class="progress">
+                        <div class="progress-fill" style="width: 100%;"></div>
+                    </div>
                 </div>
-            </div>
-        </section>
+                <div class="language">
+                    <span>Английский</span>
+                    <div class="progress">
+                        <div class="progress-fill" style="width: 95%;"></div>
+                    </div>
+                </div>
+                <div class="language">
+                    <span>Латышский</span>
+                    <div class="progress">
+                        <div class="progress-fill" style="width: 90%;"></div>
+                    </div>
+                </div>
+            </section>
+        </div>
     </main>
     <footer>
         <div class="container">
