--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body>
     <div id="pagepiling">
         <div class="section center" id="home">
-            <img id="avatar" src="main/avatar.jpg" />
+            <img id="avatar" src="avatar.jpg" />
             <h1 id="title">Александр Биланин</h1>
             <p id="subtitle">Страстный, креативный и преданный</p>
             <h4>Тестировщик ПО</h4>
