--- a/index.html
+++ b/index.html
@@ -27,10 +27,9 @@
         <div class="section center" id="home">
             <img id="avatar" src="avatar.jpg" />
             <h1 id="title">Александр Биланин</h1>
-            <p id="subtitle">Страстный, креативный и преданный</p>
+            <p id="subtitle">Внимательный, ответственный и ориентированный на качество</p>
             <h4>Тестировщик ПО</h4>
 
-            <h6><a href="http://example.com" target="_blank">Пример Студия Дизайна</a></h6>
             <p><a href="mailto:a.bilanins@yahoo.com">a.bilanins@yahoo.com</a></p>
         </div>
 
